hellonginx-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: hellonginx-clusterip-service
spec:
  type: ClusterIP
  selector:
    app: hellonginx-label
  ports:
    - port: 9090
      targetPort: 80
